shopping cart WIP

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
 
 <body>
   <app-root></app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4WlYWvD5eaLGWxNTkQl4SJBsmaX6IBIk&libraries=places&language=es"></script>
 </body>
 
 </html>
