--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
 <body>
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4WlYWvD5eaLGWxNTkQl4SJBsmaX6IBIk&libraries=places&language=es"></script>
+  <script type="text/javascript" src="https://cdn.conekta.io/js/latest/conekta.js"></script>
 </body>
 
 </html>
