--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,33 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8"/>
   <title>Ionic App</title>
 
-  <base href="/" />
+  <base href="/"/>
 
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+  <meta name="color-scheme" content="light dark"/>
+  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+  <meta name="format-detection" content="telephone=no"/>
+  <meta name="msapplication-tap-highlight" content="no"/>
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans:wght@300&family=Playfair+Display:ital,wght@1,500&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&amp;family=Open+Sans:wght@300&amp;family=Playfair+Display:ital,wght@1,500&amp;display=swap" rel="stylesheet">
 
   <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 
 <body>
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4WlYWvD5eaLGWxNTkQl4SJBsmaX6IBIk&libraries=places&language=es"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4WlYWvD5eaLGWxNTkQl4SJBsmaX6IBIk&amp;libraries=places&amp;language=es"></script>
   <script type="text/javascript" src="https://cdn.conekta.io/js/latest/conekta.js"></script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
