load imgs after

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,52 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png"/>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&amp;family=Open+Sans:wght@300&amp;family=Playfair+Display:ital,wght@1,500&amp;display=swap" rel="stylesheet">
+  <link rel="prefetch" href="./assets/images/categories/services/1-1-MQ-SC-DN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/1-2-MQ-SC-DN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/2-3-PN-ELB.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-1-MQ-SC-DN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/2-4-ALT-PN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-1-MQ-SC-DN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-2-PN-BS.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-3-PN-ELB.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-4-ALT-PN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-5-MQ-SC-PN-BS.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-6-MQ-SC-PN-ELB.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-7-MQ-SC-ALT-PN.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/3-8-MQ-PN-NIN-FST.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/4-10-MQ-XV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/4-11-PN-XV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/4-12-PB-MQ-PN-XV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/4-9-MQ-PN-XV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-13-PRB-MQ-PN-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-14-PRB-MQ-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-15-PRB-PN-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-16-MQ-PN-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-17-MQ-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-18-PN-NV.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-19-MQ-PN-DMS-ACMP.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-20-MQ-DMS-ACMP.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-21-PN-DMS-ACMP.jpg" as="image" media="(min-width: 468px)">
+  <link rel="prefetch" href="./assets/images/categories/services/5-23-PN-NN-9AN.jpg" as="image" media="(min-width: 468px)">
+
+  <!-- <link rel="preload" href="./assets/images/categories/3-CAT.jpg" as="image" media="(min-width: 460px)">
+  <link rel="preload" href="./assets/images/categories/4-CAT.jpg" as="image" media="(min-width: 460px)">
+  <link rel="preload" href="./assets/images/categories/5-CAT.jpg" as="image" media="(min-width: 460px)"> -->
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="apple-touch-icon" href="assets/icons/icon-72x72.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-96x96.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-128x128.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-144x144.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-152x152.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-192x192.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-384x384.png">
+  <link rel="apple-touch-icon" href="assets/icons/icon-512x512.png">
+  
+
   <meta name="theme-color" content="#1976d2">
 </head>
 
@@ -26,7 +67,10 @@
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAP1kEvf4GgsAVLzI2MLGKpi1w17nmNDTQ&amp;libraries=places&amp;language=es"></script>
   <script type="text/javascript" src="https://cdn.conekta.io/js/latest/conekta.js"></script>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
 
+  
+</body>
+<noscript>
+This application needs JavaScript to work, please enable JavaScript on your browser
+</noscript>
 </html>
